Add board service and gamectrl

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.11-build.2202"
+    "angular": "~1.2.11-build.2202",
+    "underscore": "~1.5.2"
   }
 }
